--- a/art/p0.tex
+++ b/art/p0.tex
@@ -1,4 +1,4 @@
-\documentclass{standalone}
+\documentclass[convert={density=300,size=1080x800,outext=.png}]{standalone}
 \usepackage{pgfplots}
 	\pgfplotsset{compat=newest}
 	\usetikzlibrary{positioning}
